--- a/tests/integration/targets/podman_search/tasks/main.yml
+++ b/tests/integration/targets/podman_search/tasks/main.yml
@@ -33,8 +33,8 @@
       assert:
         that:
           - info_2.images | length == 1
-          - info_2.images[0].Index = "registry.access.redhat.com"
-          - info_2.images[0].Name = "registry.access.redhat.com/rhel7/rsyslog"
+          - info_2.images[0].Index == "registry.access.redhat.com"
+          - info_2.images[0].Name == "registry.access.redhat.com/rhel7/rsyslog"
 
     - name: Search for specific image tags
       containers.podman.podman_search:
