--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -314,6 +314,18 @@ releases:
       - Create podman secret when skip_existing=True and it does not exist
       release_summary: Idempotency redesign and a lot of new options
     release_date: '2024-05-30'
+  1.15.0:
+    changes:
+      bugfixes:
+      - Fix issue with pushing podman image to repo name and org
+      major_changes:
+      - Add podman search
+      release_summary: Podman search module and bugfixes for Podman image
+    modules:
+    - description: Search for remote images using podman
+      name: podman_search
+      namespace: ''
+    release_date: '2024-06-03'
   1.2.0:
     changes:
       minor_changes:
