--- a/.github/workflows/podman_container_api.yml
+++ b/.github/workflows/podman_container_api.yml
@@ -41,17 +41,17 @@ jobs:
       matrix:
         ansible-version:
           - ansible<2.10
-          - git+https://github.com/ansible/ansible.git@stable-2.15
+          # - git+https://github.com/ansible/ansible.git@stable-2.17
           - git+https://github.com/ansible/ansible.git@devel
         os:
           - ubuntu-22.04
         python-version:
-          - "3.10"
+          - "3.11"
         podman-version:
           - unstable
         include:
           - os: ubuntu-22.04
-            ansible-version: git+https://github.com/ansible/ansible.git@stable-2.15
+            ansible-version: git+https://github.com/ansible/ansible.git@stable-2.17
             python-version: "3.10"
             podman-version: stable
 
@@ -108,6 +108,7 @@ jobs:
           python3 -m pip install --user -r requirements.txt
           podman system service --time=0 unix:///tmp/podman.sock &
           sudo podman system service --time=0 unix:///tmp/root-podman.sock &
+          podman system service --time=0 tcp:localhost:25771 &
 
           echo $ANSIBLE_CONFIG
           command -v ansible-playbook
