--- a/tests/integration/targets/podman_container_api/tasks/main.yml
+++ b/tests/integration/targets/podman_container_api/tasks/main.yml
@@ -34,5 +34,30 @@
 - name: Test idempotency of containers in pods
   include_tasks:  ../../podman_container_idempotency/tasks/idem_pods.yml
 
+- name: Test idempotency of bool options in containers and idempotency
+  include_tasks:  ../../podman_container_idempotency/tasks/idem_bool_list_dict.yml
+
+- name: Test idempotency of other settings
+  include_tasks:  ../../podman_container_idempotency/tasks/idem_all.yml
+
+- name: Set podman socket var for rootless
+  set_fact:
+    podman_socket: http://localhost:25771
+
+- name: Run tasks from podman container
+  include_tasks:  ../../podman_container/tasks/main.yml
+
+- name: Run tasks from podman container info
+  include_tasks:  ../../podman_container_info/tasks/main.yml
+
+- name: Prepare a container
+  include_tasks:  ../../podman_container_idempotency/tasks/build_test_container.yml
+
+- name: Test idempotency of other settings
+  include_tasks:  ../../podman_container_idempotency/tasks/idem_volumes.yml
+
+- name: Test idempotency of ports
+  include_tasks:  ../../podman_container_idempotency/tasks/idem_ports.yml
+
 - name: Test idempotency of other settings
   include_tasks:  ../../podman_container_idempotency/tasks/idem_all.yml
