--- a/.github/workflows/podman_container.yml
+++ b/.github/workflows/podman_container.yml
@@ -43,7 +43,7 @@ jobs:
       matrix:
         ansible-version:
           - ansible<2.10
-          - git+https://github.com/ansible/ansible.git@stable-2.15
+          - git+https://github.com/ansible/ansible.git@stable-2.17
           - git+https://github.com/ansible/ansible.git@devel
         os:
           - ubuntu-22.04
@@ -53,9 +53,18 @@ jobs:
           - unstable
         include:
           - os: ubuntu-22.04
-            ansible-version: git+https://github.com/ansible/ansible.git@stable-2.15
+            ansible-version: git+https://github.com/ansible/ansible.git@stable-2.17
             python-version: "3.10"
             podman-version: stable
+          - os: ubuntu-22.04
+            ansible-version: git+https://github.com/ansible/ansible.git@devel
+            python-version: "3.11"
+            podman-version: unstable
+        exclude:
+          - os: ubuntu-22.04
+            ansible-version: git+https://github.com/ansible/ansible.git@devel
+            python-version: "3.10"
+            podman-version: unstable
 
     steps:
 
