--- a/.github/workflows/podman_container_exec.yml
+++ b/.github/workflows/podman_container_exec.yml
@@ -34,13 +34,13 @@ jobs:
       fail-fast: false
       matrix:
         ansible-version:
-          - ansible<2.10
-          # - git+https://github.com/ansible/ansible.git@stable-2.11
+          # - ansible<2.10
+          - git+https://github.com/ansible/ansible.git@stable-2.17
           - git+https://github.com/ansible/ansible.git@devel
         os:
           - ubuntu-22.04
         python-version:
-          - "3.10"
+          - "3.11"
 
     steps:
 
