CI: fix Podman search of invalid image
Signed-off-by: Sagi Shnaidman <sshnaidm@redhat.com>

--- a/tests/integration/targets/podman_search/tasks/main.yml
+++ b/tests/integration/targets/podman_search/tasks/main.yml
@@ -3,7 +3,7 @@
 
     - name: Search for an invalid image
       containers.podman.podman_search:
-        term: invalidtermnope
+        term: registry.fedoraproject.org/invalidtermnope
         executable: "{{ test_executable | default('podman') }}"
       register: info_0
 
